--- a/Day10.ipynb
+++ b/Day10.ipynb
@@ -609,10 +609,48 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "4\n",
+      "8\n",
+      "10\n",
+      "Part 2 result: 325\n"
+     ]
+    }
+   ],
    "source": [
-    "#346 too high"
+    "def ray_inside(graph, up=True):\n",
+    "    if up:\n",
+    "        edges = ['|', 'J', 'L']\n",
+    "    else:\n",
+    "        edges = ['|', '7', 'F']\n",
+    "    count = 0\n",
+    "    for line in graph:\n",
+    "        inside = False\n",
+    "        for c in line:\n",
+    "            if c == '.' and inside:\n",
+    "                count += 1\n",
+    "            elif c in edges:\n",
+    "                inside = not inside\n",
+    "    return count\n",
+    "\n",
+    "print(ray_inside(ngraph2))\n",
+    "print(ray_inside(ngraph3))\n",
+    "print(ray_inside(ngraph4))\n",
+    "print(ray_inside(ngraph5))\n",
+    "print('Part 2 result:', ray_inside(data_ngraph))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
