--- a/Day10.ipynb
+++ b/Day10.ipynb
@@ -240,28 +240,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_next_pos(graph, pos, dxdy):\n",
-    "    xy = deepcopy(dxdy)\n",
+    "def get_next_pos(graph, pos, dxdy, os=0):\n",
+    "    #os tracks edges\n",
     "    \n",
-    "    #also track outside\n",
-    "    os = 0\n",
+    "    xy = deepcopy(dxdy)\n",
     "    \n",
     "    x = pos[0]+xy[0]\n",
     "    y = pos[1]+xy[1]\n",
     "    \n",
     "    while True:\n",
     "        if x < 0 or x >= len(graph):\n",
-    "            return None\n",
+    "            return [None]\n",
     "        if y < 0 or y >= len(graph[x]):\n",
-    "            return None\n",
+    "            return [None]\n",
     "\n",
     "        if graph[x,y] == '.':\n",
-    "            return (x,y)\n",
+    "            return [(x,y)]\n",
     "        \n",
     "        if graph[x,y] == '-' and (xy[0] == -1 or xy[0] == 1):\n",
-    "            return None\n",
+    "            if xy[0] == -1:\n",
+    "                xy[0] = 0\n",
+    "                xy[1] = 1\n",
+    "                pos1 = get_next_pos(graph, (x,y), xy, 1)\n",
+    "                xy[1] = -1\n",
+    "                pos2 = get_next_pos(graph, (x,y), xy, 1)\n",
+    "            else: #xy[0] == 1\n",
+    "                xy[0] = 0\n",
+    "                xy[1] = 1\n",
+    "                pos1 = get_next_pos(graph, (x,y), xy, -1)\n",
+    "                xy[1] = -1\n",
+    "                pos2 = get_next_pos(graph, (x,y), xy, -1)\n",
+    "            \n",
+    "            ret_pos = []\n",
+    "            for p in pos1:\n",
+    "                if p is not None:\n",
+    "                    ret_pos.append(p)\n",
+    "            for p in pos2:\n",
+    "                if p is not None:\n",
+    "                    ret_pos.append(p)\n",
+    "            if len(ret_pos) > 0:\n",
+    "                return ret_pos\n",
+    "            return [None]\n",
+    "        \n",
     "        if graph[x,y] == '|' and (xy[1] == -1 or xy[1] == 1):\n",
-    "            return None\n",
+    "            if xy[1] == -1:\n",
+    "                xy[0] = 1\n",
+    "                xy[1] = 0\n",
+    "                pos1 = get_next_pos(graph, (x,y), xy, 1)\n",
+    "                xy[0] = -1\n",
+    "                pos2 = get_next_pos(graph, (x,y), xy, 1)\n",
+    "            else: #xy[1] == 1\n",
+    "                xy[0] = 1\n",
+    "                xy[1] = 0\n",
+    "                pos1 = get_next_pos(graph, (x,y), xy, -1)\n",
+    "                xy[0] = -1\n",
+    "                pos2 = get_next_pos(graph, (x,y), xy, -1)\n",
+    "                \n",
+    "            ret_pos = []\n",
+    "            for p in pos1:\n",
+    "                if p is not None:\n",
+    "                    ret_pos.append(p)\n",
+    "            for p in pos2:\n",
+    "                if p is not None:\n",
+    "                    ret_pos.append(p)\n",
+    "            if len(ret_pos) > 0:\n",
+    "                return ret_pos\n",
+    "            return [None]\n",
     "    \n",
     "        #J.  .L  \n",
     "        #.F  7.\n",
@@ -269,31 +313,31 @@
     "        #Diagonals\n",
     "        if graph[x,y] == 'J' and graph[x+1,y+1] == 'F' and\\\n",
     "           graph[x,y+1] == '.' and xy[0] == -1:\n",
-    "            return (x,y+1)\n",
+    "            return [(x,y+1)]\n",
     "        elif graph[x,y] == 'F' and graph[x-1,y-1] == 'J' and\\\n",
     "             graph[x,y-1] == '.' and xy[0] == 1:\n",
-    "            return (x,y-1)\n",
+    "            return [(x,y-1)]\n",
     "        \n",
     "        elif graph[x,y] == 'L' and graph[x+1,y-1] == '7' and\\\n",
     "             graph[x,y-1] == '.' and xy[0] == -1:\n",
-    "            return (x,y-1)\n",
+    "            return [(x,y-1)]\n",
     "        elif graph[x,y] == '7' and graph[x-1,y+1] == 'L' and\\\n",
     "             graph[x,y+1] == '.' and xy[0] == 1:\n",
-    "            return (x,y+1)\n",
+    "            return [(x,y+1)]\n",
     "        \n",
     "        elif graph[x,y] == 'J' and graph[x+1,y+1] == 'F' and\\\n",
     "           graph[x+1,y] == '.' and xy[1] == -1:\n",
-    "            return (x+1,y)\n",
+    "            return [(x+1,y)]\n",
     "        elif graph[x,y] == 'F' and graph[x-1,y-1] == 'J' and\\\n",
     "             graph[x-1,y] == '.' and xy[1] == 1:\n",
-    "            return (x-1,y)\n",
+    "            return [(x-1,y)]\n",
     "        \n",
     "        elif graph[x,y] == 'L' and graph[x+1,y-1] == '7' and\\\n",
     "             graph[x+1,y] == '.' and xy[1] == 1:\n",
-    "            return (x+1,y)\n",
+    "            return [(x+1,y)]\n",
     "        elif graph[x,y] == '7' and graph[x-1,y+1] == 'L' and\\\n",
     "             graph[x-1,y] == '.' and xy[1] == -1:\n",
-    "            return (x-1,y)\n",
+    "            return [(x-1,y)]\n",
     "\n",
     "        # 7 F\n",
     "        # | | F--7\n",
@@ -307,7 +351,7 @@
     "                    x += xy[0]\n",
     "                    os = 1\n",
     "                else:\n",
-    "                    return (x,y+1)\n",
+    "                    return [(x,y+1)]\n",
     "            \n",
     "            elif graph[x,y] == '7' and os == 1:\n",
     "                if graph[x,y+1] != '.' and graph[x-1,y] != '.':\n",
@@ -316,9 +360,9 @@
     "                    y += xy[1]\n",
     "                    os = -1\n",
     "                elif graph[x,y+1] == '.':\n",
-    "                    return (x,y+1)\n",
+    "                    return [(x,y+1)]\n",
     "                else:\n",
-    "                    return (x-1,y)\n",
+    "                    return [(x-1,y)]\n",
     "            elif graph[x,y] == '7' and os == -1:\n",
     "                xy[0] = 0\n",
     "                xy[1] = -1\n",
@@ -331,7 +375,7 @@
     "                    x += xy[0]\n",
     "                    os = -1\n",
     "                else:\n",
-    "                    return (x,y-1)\n",
+    "                    return [(x,y-1)]\n",
     "                \n",
     "            elif graph[x,y] == 'F' and os == -1:\n",
     "                if graph[x,y-1] != '.' and graph[x-1,y] != '.':\n",
@@ -339,9 +383,9 @@
     "                    xy[1] = 1\n",
     "                    y += xy[1]\n",
     "                elif graph[x,y-1] == '.':\n",
-    "                    return (x,y-1)\n",
+    "                    return [(x,y-1)]\n",
     "                else:\n",
-    "                    return (x-1,y)\n",
+    "                    return [(x-1,y)]\n",
     "            elif graph[x,y] == 'F' and os == 1:\n",
     "                xy[0] = 0\n",
     "                xy[1] = 1\n",
@@ -351,10 +395,10 @@
     "                if graph[x,y+os] != '.':\n",
     "                    x += xy[0]\n",
     "                else:\n",
-    "                    return (x,y+os)\n",
+    "                    return [(x,y+os)]\n",
     "           \n",
     "            else:\n",
-    "                return None\n",
+    "                return [None]\n",
     "\n",
     "        elif xy[0] == 1:\n",
     "            #left side down\n",
@@ -363,7 +407,7 @@
     "                    x += xy[0]\n",
     "                    os = 1\n",
     "                else:\n",
-    "                    return (x,y+1)\n",
+    "                    return [(x,y+1)]\n",
     "            \n",
     "            elif graph[x,y] == 'J' and os == 1:\n",
     "                if graph[x,y+1] != '.' and graph[x+1,y] != '.':\n",
@@ -371,9 +415,9 @@
     "                    xy[1] = -1\n",
     "                    y += xy[1]\n",
     "                elif graph[x,y+1] == '.':\n",
-    "                    return (x,y+1)\n",
+    "                    return [(x,y+1)]\n",
     "                else:\n",
-    "                    return (x+1,y)\n",
+    "                    return [(x+1,y)]\n",
     "            elif graph[x,y] == 'J' and os == -1:\n",
     "                xy[0] = 0\n",
     "                xy[1] = -1\n",
@@ -385,7 +429,7 @@
     "                    x += xy[0]\n",
     "                    os = -1\n",
     "                else:\n",
-    "                    return (x,y-1)\n",
+    "                    return [(x,y-1)]\n",
     "                \n",
     "            elif graph[x,y] == 'L' and os == -1:\n",
     "                if graph[x,y-1] != '.' and graph[x+1,y] != '.':\n",
@@ -394,9 +438,9 @@
     "                    y += xy[1]\n",
     "                    os = 1\n",
     "                elif graph[x,y-1] == '.':\n",
-    "                    return (x,y-1)\n",
+    "                    return [(x,y-1)]\n",
     "                else:\n",
-    "                    return (x+1,y)\n",
+    "                    return [(x+1,y)]\n",
     "            elif graph[x,y] == 'L' and os == 1:\n",
     "                xy[0] = 0\n",
     "                xy[1] = 1\n",
@@ -407,10 +451,10 @@
     "                if graph[x,y+os] != '.':\n",
     "                    x += xy[0]\n",
     "                else:\n",
-    "                    return (x,y+os)\n",
+    "                    return [(x,y+os)]\n",
     "           \n",
     "            else:\n",
-    "                return None\n",
+    "                return [None]\n",
     "\n",
     "        # L--J\n",
     "        # F--7\n",
@@ -421,7 +465,7 @@
     "                    y += xy[1]\n",
     "                    os = 1\n",
     "                else:\n",
-    "                    return (x,y+1)\n",
+    "                    return [(x,y+1)]\n",
     "            \n",
     "            elif graph[x,y] == 'L' and os == 1:\n",
     "                if graph[x+1,y] != '.' and graph[x,y-1] != '.':\n",
@@ -430,9 +474,9 @@
     "                    x += xy[0]\n",
     "                    os = -1\n",
     "                elif graph[x+1,y] == '.':\n",
-    "                    return (x+1,y)\n",
+    "                    return [(x+1,y)]\n",
     "                else:\n",
-    "                    return (x,y-1)\n",
+    "                    return [(x,y-1)]\n",
     "            elif graph[x,y] == 'L' and os == -1:\n",
     "                xy[0] = -1\n",
     "                xy[1] = 0\n",
@@ -445,7 +489,7 @@
     "                    y += xy[1]\n",
     "                    os = -1\n",
     "                else:\n",
-    "                    return (x-1,y)\n",
+    "                    return [(x-1,y)]\n",
     "                \n",
     "            elif graph[x,y] == 'F' and os == -1:\n",
     "                if graph[x-1,y] != '.' and graph[x,y-1] != '.':\n",
@@ -453,9 +497,9 @@
     "                    xy[1] = 0\n",
     "                    x += xy[0]\n",
     "                elif graph[x-1,y] == '.':\n",
-    "                    return (x-1,y)\n",
+    "                    return [(x-1,y)]\n",
     "                else:\n",
-    "                    return (x,y-1)\n",
+    "                    return [(x,y-1)]\n",
     "            elif graph[x,y] == 'F' and os == 1:\n",
     "                xy[0] = 1\n",
     "                xy[1] = 0\n",
@@ -465,10 +509,10 @@
     "                if graph[x+os,y] != '.':\n",
     "                    y += xy[1]\n",
     "                else:\n",
-    "                    return (x+os,y)\n",
+    "                    return [(x+os,y)]\n",
     "           \n",
     "            else:\n",
-    "                return None\n",
+    "                return [None]\n",
     "            \n",
     "        # L--J\n",
     "        # F--7\n",
@@ -479,7 +523,7 @@
     "                    y += xy[1]\n",
     "                    os = 1\n",
     "                else:\n",
-    "                    return (x+1,y)\n",
+    "                    return [(x+1,y)]\n",
     "            \n",
     "            elif graph[x,y] == 'J' and os == 1:\n",
     "                if graph[x+1,y] != '.' and graph[x,y+1] != '.':\n",
@@ -488,9 +532,9 @@
     "                    x += xy[0]\n",
     "                    os = 1\n",
     "                elif graph[x+1,y] == '.':\n",
-    "                    return (x+1,y)\n",
+    "                    return [(x+1,y)]\n",
     "                else:\n",
-    "                    return (x,y+1)\n",
+    "                    return [(x,y+1)]\n",
     "            elif graph[x,y] == 'J' and os == -1:\n",
     "                xy[0] = -1\n",
     "                xy[1] = 0\n",
@@ -502,7 +546,7 @@
     "                    y += xy[1]\n",
     "                    os = -1\n",
     "                else:\n",
-    "                    return (x-1,y)\n",
+    "                    return [(x-1,y)]\n",
     "                \n",
     "            elif graph[x,y] == '7' and os == -1:\n",
     "                if graph[x-1,y] != '.' and graph[x,y+1] != '.':\n",
@@ -511,9 +555,9 @@
     "                    x += xy[0]\n",
     "                    os = 1\n",
     "                elif graph[x-1,y] == '.':\n",
-    "                    return (x-1,y)\n",
+    "                    return [(x-1,y)]\n",
     "                else:\n",
-    "                    return (x,y+1)\n",
+    "                    return [(x,y+1)]\n",
     "            elif graph[x,y] == '7' and os == 1:\n",
     "                xy[0] = 1\n",
     "                xy[1] = 0\n",
@@ -524,10 +568,10 @@
     "                if graph[x+os,y] != '.':\n",
     "                    y += xy[1]\n",
     "                else:\n",
-    "                    return (x+os,y)\n",
+    "                    return [(x+os,y)]\n",
     "           \n",
     "            else:\n",
-    "                return None"
+    "                return [None]"
    ]
   },
   {
@@ -545,14 +589,13 @@
       "4\n",
       "8\n",
       "10\n",
-      "Part 2 result: 346\n"
+      "Part 2 result: 325\n"
      ]
     }
    ],
    "source": [
     "#Breadth-First Search\n",
     "def BFS_part2(graph, start):\n",
-    "    \n",
     "    dxdy = [[-1,0], [1,0], [0,-1], [0,1]]\n",
     "    queue = deque([start])\n",
     "    dist = {start: 0}\n",
@@ -567,12 +610,13 @@
     "\n",
     "        for xy in dxdy:\n",
     "            nxt_dist = cur_dist + 1\n",
-    "            nxt_pos = get_next_pos(graph, cur_pos, xy)\n",
+    "            nxt_poss = get_next_pos(graph, cur_pos, xy)\n",
     "            \n",
-    "            if nxt_pos is not None and nxt_pos not in dist.keys():\n",
-    "                queue.append(nxt_pos)\n",
-    "                dist[nxt_pos] = nxt_dist\n",
-    "                outgraph[nxt_pos[0],nxt_pos[1]] = 'O'\n",
+    "            for nxt_pos in nxt_poss:\n",
+    "                if nxt_pos is not None and nxt_pos not in dist.keys():\n",
+    "                    queue.append(nxt_pos)\n",
+    "                    dist[nxt_pos] = nxt_dist\n",
+    "                    outgraph[nxt_pos[0],nxt_pos[1]] = 'O'\n",
     "        \n",
     "    graph_size = graph.shape[0]*graph.shape[1]\n",
     "    path = np.where(graph != '.')\n",
@@ -581,27 +625,24 @@
     "    \n",
     "    inside = graph_size - path_size - outside\n",
     "    \n",
-    "    #for i in range(1, len(outgraph)-1):\n",
-    "    #    print(''.join(outgraph[i][1:-1]))\n",
-    "    \n",
     "    return inside\n",
     "\n",
     "graph2, start2 = get_graph(test2)\n",
     "dist2, ngraph2 = BFS_part1(graph2, start2)\n",
     "print(BFS_part2(ngraph2, (0,0)))\n",
-    "#print()\n",
+    "\n",
     "graph3, start3 = get_graph(test3)\n",
     "dist3, ngraph3 = BFS_part1(graph3, start3)\n",
     "print(BFS_part2(ngraph3, (0,0)))\n",
-    "#print()\n",
+    "\n",
     "graph4, start4 = get_graph(test4)\n",
     "dist4, ngraph4 = BFS_part1(graph4, start4)\n",
     "print(BFS_part2(ngraph4, (0,0)))\n",
-    "#print()\n",
+    "\n",
     "graph5, start5 = get_graph(test5)\n",
     "dist5, ngraph5 = BFS_part1(graph5, start5)\n",
     "print(BFS_part2(ngraph5, (0,0)))\n",
-    "#print()\n",
+    "\n",
     "print('Part 2 result:', BFS_part2(data_ngraph, (0,0)))"
    ]
   },
@@ -669,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
