--- a/Day17.ipynb
+++ b/Day17.ipynb
@@ -7,8 +7,10 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from collections import deque\n",
-    "from copy import deepcopy"
+    "#from collections import deque\n",
+    "from collections import defaultdict\n",
+    "from copy import deepcopy\n",
+    "import heapq"
    ]
   },
   {
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,23 +73,8 @@
       "...........v.\n",
       "...........v>\n",
       "\n",
-      "(12, 12, 0) [109, 1]\n",
-      "(12, 12, 1) [105, 3]\n",
-      ".>>>..^>>>...\n",
-      "...v>>>..v...\n",
-      ".........v>..\n",
-      "..........v..\n",
-      "..........v>.\n",
-      "...........v>\n",
-      "............v\n",
-      "...........<v\n",
-      "...........v.\n",
-      "...........v>\n",
-      "............v\n",
-      "............v\n",
-      "............v\n",
-      "[(0, 0, 0), (0, 1, 0), (0, 2, 0), (0, 3, 0), (1, 3, 1), (1, 4, 0), (1, 5, 0), (1, 6, 0), (0, 6, 3), (0, 7, 0), (0, 8, 0), (0, 9, 0), (1, 9, 1), (2, 9, 1), (2, 10, 0), (3, 10, 1), (4, 10, 1), (4, 11, 0), (5, 11, 1), (5, 12, 0), (6, 12, 1), (7, 12, 1), (7, 11, 2), (8, 11, 1), (9, 11, 1), (9, 12, 0), (10, 12, 1), (11, 12, 1), (12, 12, 1)]\n",
-      "105\n"
+      "102\n",
+      "Part 1 result: 953\n"
      ]
     }
    ],
@@ -101,6 +88,7 @@
     "            else:\n",
     "                string += test_path[i][j]\n",
     "        print(string)\n",
+    "    print()\n",
     "\n",
     "def gen_graph(data):\n",
     "    graph = []\n",
@@ -111,124 +99,187 @@
     "        graph.append(graph_line)\n",
     "    return np.array(graph)\n",
     "\n",
-    "def dijkstra(graph, start, end):\n",
+    "def dijkstra(graph, start, end, min_chain=1, max_chain=3, prnt=False):\n",
     "    # 0 >\n",
     "    # 1 v\n",
     "    # 2 <\n",
     "    # 3 ^\n",
     "    \n",
-    "    visited = {}\n",
-    "    routes = {}\n",
-    "    for i in range(0, len(graph)):\n",
-    "        for j in range(0, len(graph[i])):\n",
-    "            if i == 0 and j == 0:\n",
-    "                continue\n",
-    "            for k in range(0, 4):\n",
-    "                if (i == 0 and k == 1) or\\\n",
-    "                   (i == len(graph)-1 and k == 3) or\\\n",
-    "                   (j == 0 and k == 0) or\\\n",
-    "                   (j == len(graph[i])-1 and k == 2):\n",
-    "                    continue\n",
-    "                visited[(i,j,k)] = [np.inf,0] #distance, chain\n",
-    "                routes[(i,j,k)] = []\n",
-    "\n",
-    "    visited[(start[0],start[1],np.nan)] = [0,0]\n",
-    "    routes[(start[0],start[1],np.nan)] = [(start[0],start[1],0)]\n",
-    "    \n",
     "    dxdy = [[0,1], [1,0], [0,-1], [-1,0]]\n",
     "    \n",
-    "    run = True\n",
-    "    while run:\n",
-    "        has_update = False\n",
-    "        for vis in visited.keys():\n",
-    "                \n",
-    "            for i in range(0, len(dxdy)):\n",
-    "                xy = dxdy[i]\n",
-    "                nxt_pos = (vis[0]+xy[0], vis[1]+xy[1], i)\n",
-    "                if nxt_pos not in visited.keys():\n",
-    "                    continue\n",
-    "                \n",
-    "                #cannot backtrack\n",
-    "                if i == (vis[2]+2)%4:\n",
-    "                    continue\n",
-    "                    \n",
-    "                if vis[0] == 0 and vis[1] == 0:\n",
-    "                    chn = 1\n",
-    "                elif i == vis[2]:\n",
-    "                    chn = visited[vis][1]+1\n",
-    "                else:\n",
-    "                    chn = 1\n",
-    "                #cannot move more than 3 in one direction\n",
-    "                if chn > 3:\n",
-    "                    continue\n",
-    "                \n",
-    "                nxt_val = graph[nxt_pos[0],nxt_pos[1]] \n",
-    "                nxt_dist = [visited[vis][0]+nxt_val, chn]\n",
-    "                \n",
-    "                rout = deepcopy(routes[vis])\n",
-    "                rout.append(nxt_pos)\n",
-    "                \n",
-    "                if np.isfinite(visited[nxt_pos][0]) == False or nxt_dist[0] < visited[nxt_pos][0]:\n",
-    "                    visited[nxt_pos] = nxt_dist\n",
-    "                    routes[nxt_pos] = rout\n",
-    "                    has_update = True\n",
-    "        \n",
-    "        if has_update == False:\n",
-    "            break\n",
-    "        \n",
-    "        run = False\n",
-    "        for vis in visited.keys():\n",
-    "            if np.isfinite(visited[vis][0]) == False:\n",
-    "                run = True\n",
-    "                break\n",
-    "                \n",
-    "    ends = []\n",
-    "    scores = []\n",
+    "    distances = {}\n",
+    "    for i in range(0, len(dxdy)):\n",
+    "        for j in range(1, max_chain+1):\n",
+    "            distances[(start[0],start[1],i,j)] = 0\n",
     "    \n",
-    "    for i in range(0, 4):\n",
-    "        if (end[0],end[1],i) in visited.keys():\n",
-    "            ends.append((end[0],end[1],i))\n",
-    "            scores.append(visited[(end[0],end[1],i)][0])\n",
-    "            print((end[0],end[1],i), visited[(end[0],end[1],i)])\n",
+    "    if prnt:\n",
+    "        routes = {}\n",
+    "        for i in range(0, len(dxdy)):\n",
+    "            for j in range(1, max_chain+1):\n",
+    "                routes[(start[0],start[1],i,j)] = [(0, start, 0, 0)]\n",
+    "    \n",
+    "    queue = [(0, start, 0, 0)] #distance, position, direction, chain\n",
+    "    while queue:\n",
+    "        cur_dist, cur_pos, cur_dir, cur_chain = heapq.heappop(queue)\n",
+    "        \n",
+    "        for nxt_dir in range(0, len(dxdy)):\n",
+    "            #cannot backtrack\n",
+    "            if nxt_dir == (cur_dir+2)%4:\n",
+    "                continue\n",
+    "                \n",
+    "            #Must move at least min_chain in certain direction\n",
+    "            if cur_chain < min_chain and nxt_dir != cur_dir:\n",
+    "                continue\n",
     "            \n",
-    "    min_dist = np.argmin(scores)\n",
+    "            #cannot travel more than max_chain in one direction\n",
+    "            nxt_chain = 1\n",
+    "            if nxt_dir == cur_dir:\n",
+    "                nxt_chain += cur_chain\n",
+    "            if nxt_chain > max_chain:\n",
+    "                continue\n",
+    "                \n",
+    "            nxt_pos = (cur_pos[0]+dxdy[nxt_dir][0],cur_pos[1]+dxdy[nxt_dir][1])\n",
+    "            #position must exist...\n",
+    "            if 0 > nxt_pos[0] or nxt_pos[0] >= len(graph) or 0 > nxt_pos[1] or nxt_pos[1] >= len(graph[0]):\n",
+    "                continue\n",
+    "            #...and must not have been visited\n",
+    "            if (nxt_pos[0], nxt_pos[1], nxt_dir, nxt_chain) in distances.keys():\n",
+    "                continue\n",
+    "                \n",
+    "            nxt_dist = cur_dist+graph[nxt_pos[0],nxt_pos[1]]\n",
+    "            if nxt_chain >= min_chain:\n",
+    "                #if nxt_pos[0] == 12 and nxt_pos[1] == 12:\n",
+    "                #    print(nxt_dist, min_chain, nxt_chain)\n",
+    "                #    print((nxt_pos[0], nxt_pos[1], nxt_dir, nxt_chain))\n",
+    "                distances[(nxt_pos[0], nxt_pos[1], nxt_dir, nxt_chain)] = nxt_dist\n",
+    "            heapq.heappush(queue, (nxt_dist, nxt_pos, nxt_dir, nxt_chain))\n",
+    "            \n",
+    "            if prnt:\n",
+    "                if cur_pos[0] == 0 and cur_pos[1] == 0 and cur_dist == 0 and cur_chain == 0:\n",
+    "                    rout = [(0, start, 0, 0)]\n",
+    "                else:\n",
+    "                    rout = deepcopy(routes[(cur_pos[0], cur_pos[1], cur_dir, cur_chain)])\n",
+    "                rout.append((nxt_dist, nxt_pos, nxt_dir, nxt_chain))\n",
+    "                routes[(nxt_pos[0], nxt_pos[1], nxt_dir, nxt_chain)] = rout\n",
+    "            \n",
+    "    end_distances = []\n",
+    "    ends = []\n",
+    "    for i in range(0, len(dxdy)):\n",
+    "        for j in range(1, max_chain+1):\n",
+    "            if (end[0],end[1],i,j) in distances.keys():\n",
+    "                end_distances.append(distances[(end[0],end[1],i,j)])\n",
+    "                ends.append((end[0],end[1],i,j))\n",
+    "            \n",
+    "    min_idx = np.argmin(end_distances)\n",
     "    \n",
-    "    return visited[ends[min_dist]][0], routes[ends[min_dist]]\n",
+    "    if prnt:\n",
+    "        return end_distances[min_idx], routes[ends[min_idx]]\n",
+    "    else:\n",
+    "        return end_distances[min_idx], None\n",
     "\n",
-    "def print_path(graph, route, dist):\n",
+    "def print_path(graph, route, max_chain=3):\n",
     "    move = ['>', 'v', '<', '^']\n",
     "    \n",
-    "    vals = []\n",
-    "    rt = []\n",
+    "    path = {}\n",
+    "    for value in route:\n",
+    "        if value[1] == (0,0):\n",
+    "            continue\n",
+    "        path[value[1]] = value[2]\n",
+    "    \n",
     "    for i in range(0, len(graph)):\n",
     "        string = ''\n",
     "        for j in range(0, len(graph[i])):\n",
     "            empty = True\n",
-    "            for k in range(0, 4):\n",
-    "                if (i,j,k) in route and (i!=0 or j !=0):\n",
-    "                    vals.append(graph[i,j])\n",
-    "                    string += move[k]\n",
-    "                    rt.append(string[-1])\n",
-    "                    empty = False\n",
-    "            if empty:\n",
+    "            if (i,j) in path.keys():\n",
+    "                string += move[path[(i,j)]]\n",
+    "            else:\n",
     "                string += '.'\n",
     "        print(string)\n",
-    "    #print(vals)\n",
-    "    #print(rt)\n",
+    "    print()\n",
     "\n",
-    "def least_loss(data):\n",
+    "def least_loss(data, min_chain=1, max_chain=3, prnt=False):\n",
     "    graph = gen_graph(data)\n",
     "    end = (len(graph)-1,len(graph[0])-1)\n",
-    "    dist, route = dijkstra(graph, (0,0), end)\n",
-    "    print_path(graph, route, dist)\n",
-    "    print(route)\n",
+    "    dist, route = dijkstra(graph, (0,0), end, min_chain, max_chain, prnt)\n",
+    "    \n",
+    "    if prnt:\n",
+    "        print_path(graph, route, max_chain)\n",
+    "    \n",
     "    return dist\n",
     "\n",
     "print_test_path(test_path)\n",
-    "print()\n",
     "\n",
-    "print(least_loss(test))\n",
-    "#print(least_loss(data))"
+    "print(least_loss(test, prnt=False))\n",
+    "print('Part 1 result:', least_loss(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".>>>>>>>>....\n",
+      "........v....\n",
+      "........v....\n",
+      "........v....\n",
+      "........v>>>>\n",
+      "............v\n",
+      "............v\n",
+      "............v\n",
+      "............v\n",
+      "............v\n",
+      "............v\n",
+      "............v\n",
+      "............v\n",
+      "\n",
+      "94\n",
+      ".>>>>>>>....\n",
+      ".......v....\n",
+      ".......v....\n",
+      ".......v....\n",
+      ".......v>>>>\n",
+      "\n",
+      "71\n",
+      "Part 2 result: 1180\n"
+     ]
+    }
+   ],
+   "source": [
+    "test2 = ['111111111111',\n",
+    "         '999999999991',\n",
+    "         '999999999991',\n",
+    "         '999999999991',\n",
+    "         '999999999991']\n",
+    "\n",
+    "test_path_p2 = ['2>>>>>>>>1323',\n",
+    "                '32154535v5623',\n",
+    "                '32552456v4254',\n",
+    "                '34465858v5452',\n",
+    "                '45466578v>>>>',\n",
+    "                '143859879845v',\n",
+    "                '445787698776v',\n",
+    "                '363787797965v',\n",
+    "                '465496798688v',\n",
+    "                '456467998645v',\n",
+    "                '122468686556v',\n",
+    "                '254654888773v',\n",
+    "                '432267465553v']\n",
+    "\n",
+    "test2_path = ['1>>>>>>>1111',\n",
+    "              '9999999v9991',\n",
+    "              '9999999v9991',\n",
+    "              '9999999v9991',\n",
+    "              '9999999v>>>>']\n",
+    "\n",
+    "print_test_path(test_path_p2)\n",
+    "print(least_loss(test, 4, 10, prnt=False))\n",
+    "print_test_path(test2_path)\n",
+    "print(least_loss(test2, 4, 10, prnt=False))\n",
+    "print('Part 2 result:', least_loss(data, 4, 10))"
    ]
   },
   {
@@ -236,9 +287,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#102"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -257,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
